updated with suprank and llm-wrapper

--- a/_publications/2024-01-01-suprank.md
+++ b/_publications/2024-01-01-suprank.md
@@ -23,8 +23,8 @@ pipeline to create hierarchical labels, extending the large scale Google
 Landmarks v2 dataset. The hierarchical dataset is publicly available
 at [github.com/cvdfoundation/google-landmark](https://github.com/cvdfoundation/google-landmark). Code will be released
 at [github.com/elias-ramzi/SupRank](https://github.com/elias-ramzi/SupRank).<br/><img src='/images/figure_intro_tpami.png'>"
-date: 2024-01-01
-venue: 'Submitted to IEEE Transactions on Pattern Analysis and Machine Intelligence (under-review TPAMI)'
+date: 2025-01-01
+venue: 'IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI, 2025)'
 paperurl: 'https://arxiv.org/abs/2309.08250'
-citation: '<b>Elias Ramzi</b>, Nicolas Audebert, Clément Rambour, André Araujo, Xavier Bitot, Nicolas Thome: Optimization of Rank Losses for Image Retrieval. Submitted to IEEE Transactions on Pattern Analysis and Machine Intelligence (under-review TPAMI).'
+citation: '<b>Elias Ramzi</b>, Nicolas Audebert, Clément Rambour, André Araujo, Xavier Bitot, Nicolas Thome: Optimization of Rank Losses for Image Retrieval. In IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI, 2025).'
 ---
