--- a/_publications/2023-07-23-heat.md
+++ b/_publications/2023-07-23-heat.md
@@ -5,6 +5,6 @@ permalink: /publication/2023-07-23-heat
 excerpt: "Out-of-distribution (OOD) detection is a critical requirement for the deployment of deep neural networks. This paper introduces the HEAT model, a new post-hoc OOD detection method estimating the density of in-distribution (ID) samples using hybrid energy-based models (EBM) in the feature space of a pre-trained backbone. HEAT complements prior density estimators of the ID density, e.g. parametric models like the Gaussian Mixture Model (GMM), to provide an accurate yet robust density estimation. A second contribution is to leverage the EBM framework to provide a unified density estimation and to compose several energy terms. Extensive experiments demonstrate the significance of the two contributions. HEAT sets new state-of-the-art OOD detection results on the CIFAR-10 / CIFAR-100 benchmark as well as on the large-scale Imagenet benchmark. The code is available at: [github.com/MarcLafon/heatood](https://github.com/MarcLafon/heatood).<br/><img src='/images/heat_figure_method.png'>"
 date: 2023-07-23
 venue: 'International Conference on Machine Learning (ICML 2023)'
-paperurl: 'https://arxiv.org/pdf/2305.16966.pdf'
+paperurl: 'https://arxiv.org/abs/2305.16966'
 citation: 'Marc Lafon, <b>Elias Ramzi</b>, Clément Rambour, Nicolas Thome: Hybrid Energy Based Model in the Feature Space for Out-of-Distribution Detection. International Conference on Machine Learning (ICML 2023).'
 ---
